# qwen3-tts-webui

./: .gitignore  .ignore  LICENSE.txt  README.md  flake.nix  pyproject.toml  reference_metadata.json  start_server.py
.github/workflows/: ruff.yml
src/qwen_voice_cloning/: __init__.py  core.py  server.py
src/voice_cloner/: __init__.py  cli.py  core.py  server.py
static/: index.html
static/css/: styles.css
static/js/: api.js  main.js  multispeaker.js  recording.js  theme.js  ui.js
