[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen3-tts-webui"
version = "0.1.0"
description = "Easy voice cloning using Qwen TTS"
authors = [{name = "AfkaraLP"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
     "numpy<=2.3",
     "soundfile>=0.12.0",
     "click>=8.0.0",
     "pydub>=0.25.0",
     "torch>=2.10.0",
     "torchvision>=0.25.0",
     "torchaudio>=2.10.0",
     "xformers>=0.0.34; sys_platform != 'darwin'",
     "qwen-tts",
     "torch>=2.0.0",
     "numba>=0.60.0",
     "librosa>=0.11.0",
     "openai-whisper>=20231117",
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "python-multipart>=0.0.6",
     "jinja2>=3.1.0",
     "yt-dlp>=2023.10.0",
 ]

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_voice_cloning"]

[tool.uv.extra-build-dependencies]
qwen_voice_cloning = ["hatchling", "editables"]

[tool.ruff]
lint.select = ["ALL"]
preview = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
